--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,9 +47,9 @@ jobs:
       #     command: |
       #       . venv/bin/activate
       #       make test
-      # # run lints!
-      # - run:
-      #     name: run lint
-      #     command: |
-      #       . venv/bin/activate
-      #       make lint
+      # run lints!
+      - run:
+          name: run lint
+          command: |
+            . venv/bin/activate
+            make lint
