--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,5 +51,6 @@ jobs:
       - run:
           name: run lint
           command: |
+            cat Dockerfile
             . venv/bin/activate
             make lint
